# Life-Notebook

./: .gitignore  01_user_original_requirements.md  02_project_plan.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_ai.py  routes_assets.py  routes_feed.py  routes_knowledge.py  routes_settings.py  routes_sleep.py  routes_tasks.py
backend/app/core/: config.py  db.py  json_store.py
backend/app/models/: asset.py  feed.py  knowledge.py  setting.py  sleep.py  task.py
backend/app/schemas/: ai.py  assets.py  sleep.py  tasks.py
backend/app/services/: assets_storage.py  feed_storage.py  knowledge_storage.py  settings_storage.py  sleep_storage.py  task_storage.py
backend/data/: assets.json  knowledge.json  settings.json
backend/mcp_server/: server.py
docs/: api-reference.md  deploy-local.md  git-workflow.md  mcp-codex.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/assets/: page.tsx
frontend/app/knowledge/: page.tsx
frontend/app/knowledge/blog/: page.tsx
frontend/app/knowledge/blog/[id]/: page.tsx
frontend/app/knowledge/entry/: page.tsx
frontend/app/knowledge/entry/[id]/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/: ActivityFeed.tsx  KnowledgeDetail.tsx  KnowledgeWorkspace.tsx  TopNav.tsx  WealthCard.tsx  WeeklyTimeline.tsx
frontend/lib/: api.ts  markdown.ts
scripts/: backup-data.ps1  deploy-local.ps1  init-data.ps1  verify-data.ps1
